# Rationals

./: LICENSE  README.md
src/: CMakeLists.txt  Rational.cpp  Rational.hpp
src/cmake/: RationalConfig.cmake
src/test/: TestRational.cpp
